<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_prev_match"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".ui.prevmatch.PrevMatchFragment">


    <Spinner
        android:id="@+id/spinner_league"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_prev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_league">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_schedule_prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progress_bar_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />


        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>